test/errors/lexer/token_character.ms
x = 5$&@*!
// Tokenization Error (Line 1, Column 10): Unexpected character !
